# dcat-ap-no-validator-service

./: .dockerignore  .flake8  .gitignore  BRegDCAT-AP-shacl_shapes_2.00_incl_warning.ttl  Dockerfile  README.md  TODO.md  dcat-ap-no-shacl_shapes_2.00.ttl  dcat-ap-no-validator-service.yaml  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: audit.yml  constraints.txt  coverage.yml  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml  test.yml
dcat_ap_no_validator_service/: app.py  gunicorn_config.py
dcat_ap_no_validator_service/adapter/: __init__.py  ontology_graph_adapter.py  remote_graph_adapter.py  shapes_graph_adapter.py
dcat_ap_no_validator_service/model/: __init__.py  graph_description.py
dcat_ap_no_validator_service/service/: __init__.py  validator_service.py
dcat_ap_no_validator_service/view/: __init__.py  liveness.py  ontologies.py  shapes.py  validator.py
src/dcat_ap_no_validator_service/: __init__.py  app.py  gunicorn_config.py
src/dcat_ap_no_validator_service/adapter/: __init__.py  ontology_graph_adapter.py  remote_graph_adapter.py  shapes_graph_adapter.py
src/dcat_ap_no_validator_service/model/: __init__.py  graph_description.py
src/dcat_ap_no_validator_service/service/: __init__.py  ontologies_service.py  shape_service.py  shapes_service.py  validator_service.py
src/dcat_ap_no_validator_service/view/: __init__.py  liveness.py  ontologies.py  shapes.py  validator.py
tests/: conftest.py
tests/contract/: test_ontologies.py  test_ping.py  test_ready.py  test_shapes.py  test_validator.py  test_validator_cpsv_ap_no.py  test_validator_dcat_ap_no.py  test_validator_skos_ap_no_ begrep.py  test_validator_skos_ap_no_begrep.py
tests/files/: baseregistries.ttl  catalog_1.json  catalog_1.ttl  catalog_1_minimal.ttl  catalog_2_not_valid.ttl  config.json  data_graph.ttl  invalid_catalog.ttl  invalid_rdf.txt  mock_cpsv-ap-no_shacl_shapes_0.9.ttl  mock_data_theme_GOVE.xml  mock_dcat-ap-no-shacl_shapes_2.00.ttl  mock_enhetsregisteret_961181399.json  mock_enhetsregisteret_991825827.json  mock_org-status.ttl  mock_org-types.ttl  mock_organization_catalog_961181399.ttl  mock_organization_catalog_991825827.ttl  mock_organization_catalogue_961181399.ttl  mock_organization_catalogue_991825827.ttl  mock_publications_europa_eu_resource_authority_licence.xml  mock_skos-ap-no-shacl_shapes.ttl  ontologies.ttl  ontology_imports_non_reachable_ontology.ttl  skos_ontologies.ttl  valid_catalog.json  valid_catalog.ttl  valid_catalog.xml  valid_catalog_cpsv-ap-no.ttl  valid_catalog_no_remote_triples.ttl  valid_catalog_references_bad_graph.ttl  valid_catalog_references_no_graph.ttl  valid_catalog_references_non_parsable_graph.ttl  valid_catalog_references_non_readable_file.ttl  valid_catalog_references_not_found_graph.ttl  valid_catalog_with_distribution.ttl  valid_collection.ttl
tests/integration/: __init__.py  test_ontologies.py  test_ping.py  test_ready.py  test_shapes.py  test_validator.py  test_validator.py.old
tests/unit/: test_ontologies_service.py  test_ontology_graph_adapter.py  test_remote_graph_adapter.py  test_shapes_graph_adapter.py  test_shapes_service.py
tests/utils/: util_ttl_to_json-ld.py  util_ttl_to_rdf_xml.py
