[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "The service validates a graph against dcat-ap-no specification"
homepage = "https://github.com/Informasjonsforvaltning/dcat-ap-no-validator-service"
license = "Apache-2.0"
name = "dcat-ap-no-validator-service"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/dcat-ap-no-validator-service"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
aiohttp-client-cache = {extras = ["redis"], version = "^0.10.0"}
aiohttp-middlewares = "^2.2.1"
certifi = "^2023.11.17"
dataclasses-json = "^0.6.3"
gunicorn = "^21.2.0"
multidict = "^6.0.4"
pyshacl = "0.21.0"
python = ">=3.9,<3.11"
python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"
rdflib = "^6.3.2"
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1.2"
aioresponses = "^0.7.6"
black = "^23.12.1"
codecov = "^2.1.13"
coverage = "^7.4.0"
flake8 = "^7.0.0"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
markdown-it-py = "3.0.0"
mypy = "^1.8.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
pep8-naming = "^0.13.3"
pytest = "^7.4.4"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-docker = "^2.0.1"
pytest-mock = "^3.12.0"
pytest-profiling = "^1.7.0"
requests = "^2.31.0"
safety = "^2.3.5"
types-redis = "^4.6.0.20240106"
types-requests = "^2.31.0.20240106"

[tool.coverage.paths]
source = ["dcat_ap_no_validator_service", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py"]
source = ["dcat_ap_no_validator_service"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "pytest_mock.*",
  "aioresponses.*",
  "pyshacl.*",
  "pythonjsonlogger.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
